fix for windows file path with spaces

--- a/config.properties
+++ b/config.properties
@@ -6,7 +6,7 @@
 ####################################################################################################
 
 # Target database SID for any activity
-oracleSid=orcl
+oracleSid=dev1
 
 # Oracle home for the target database
 oracleHome=C:\\app\\oracle\\product\\11.2.0\\dbhome_1
@@ -28,7 +28,7 @@ restoreCfile=C:\app\oracle\flash_recovery_area\orcl\snapshot\CNTRL_19_1_90765868
 backupSourceLocation=C:\app\oracle\flash_recovery_area\orcl
 
 # The destination base directory path for datafiles
-dataFileNewName=C:\app\oracle\oradata
+dataFileNewName=C:\app\oracle\oradata\dev1
 
 # The destination base directory path for logfiles. 
 # The target database will have 3 log file groups with 2 members in each group
