Final version for Beta release, fixed file path issues

--- a/bin/config.properties
+++ b/bin/config.properties
@@ -1,40 +1,41 @@
 ####################################################################################################
 # Static configuration parameters for BASDBUtilities
 #
-# Note: Use Java friendly files paths, i.e. double backslash in lieu of single backslash
-#                                      C:\\dir\\dir not C:\dir\dr
+# Note: Windows Users - Use Java friendly file paths, 
+#                       i.e. forward slash or double backslash in lieu of single backslash
+#                       e.g. C:/dir/dir OR C:\\dir\\dir NOT C:\dir\dir
 ####################################################################################################
 
 # Target database SID for any activity
-oracleSid=orcl
+oracleSid=dev1
 
 # Oracle home for the target database
-oracleHome=C:\\app\\oracle\\product\\11.2.0\\dbhome_1
+oracleHome=C:/app/oracle/product/11.2.0/dbhome_1
 
 # Preferred date format for logs
 nlsDateFormat=dd-Mon-yy HH24:MI:SS
 
 # Target location for backups
-backupTargetLocation=C:\\app\\oracle\\flash_recovery_area\\orcl\\refresh
+backupTargetLocation=C:/app/oracle/flash_recovery_area/dev1/snapshot
 
 # PFile to be used for starting the target database. 
 # It is recommended to initially set job_queue_processes=0 for database clones
-restorePfile=C:\app\oracle\flash_recovery_area\orcl\snapshot\pfile20160328072118.ora
+restorePfile=C:/app/oracle/product/11.2.0/dbhome_1/database/INITdev1.ORA
 
 # Control file to be used for a restore from a cold backup
-restoreCfile=C:\app\oracle\flash_recovery_area\orcl\snapshot\CNTRL_19_1_907658680
+restoreCfile=C:/app/oracle/flash_recovery_area/dev1/snapshot/CNTRL_14_1_921492063
 
 # The root location of backupsets and archive logs for restore
-backupSourceLocation=C:\app\oracle\flash_recovery_area\orcl
+backupSourceLocation=C:/app/oracle/flash_recovery_area/dev1
 
 # The destination base directory path for datafiles
-dataFileNewName=C:\app\oracle\oradata
+dataFileNewName=C:/app/oracle/oradata/dev1
 
 # The destination base directory path for logfiles. 
 # The target database will have 3 log file groups with 2 members in each group
-dbLogFileDest11=C:\app\oracle\oradata\dev1
-dbLogFileDest12=C:\app\oracle\oradata\dev1
+dbLogFileDest11=C:/app/oracle/oradata/dev1
+dbLogFileDest12=C:/app/oracle/oradata/dev1
 
 # Set to a point in time to perform recovery until. 
 # This must be after the hot backup control file creation and in the format YYYYMMDDHH24MISS, e.g. 20160815104400
-recoveryPointTimeStamp=20160815104400
+recoveryPointTimeStamp=20160901200800
